Typo correction 2408869_NarayanLohani_W2.ipynb
A minor change. Found a typo, corrected it.

--- a/2408869_NarayanLohani_W2.ipynb
+++ b/2408869_NarayanLohani_W2.ipynb
@@ -2673,13 +2673,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Student Id is categorical and cannot be imputed as wished to dropping it\n",
+        "# Student Id is categorical and cannot be imputed as wished so dropping it\n",
         "medical_data = medical_data.dropna(subset=['Student ID'])\n",
         "\n",
         "# Age is range from 18 to 34, mean or median any is suitable\n",
         "medical_data.loc[:, 'Age'] = medical_data['Age'].fillna(medical_data['Age'].median())\n",
         "\n",
-        "# Gender is categorical and cannot be imputed as wished to dropping it\n",
+        "# Gender is categorical and cannot be imputed as wished so dropping it\n",
         "medical_data = medical_data.dropna(subset=['Gender'])\n",
         "\n",
         "# Height is numeric using mean for best expectation\n",
@@ -2688,7 +2688,7 @@
         "# Weight is numeric using mean for best expectation\n",
         "medical_data.loc[:, 'Weight'] = medical_data['Weight'].fillna(medical_data['Weight'].mean())\n",
         "\n",
-        "# Blood Type is categorical and cannot be imputed as wished to dropping it\n",
+        "# Blood Type is categorical and cannot be imputed as wished so dropping it\n",
         "medical_data = medical_data.dropna(subset=['Blood Type'])\n",
         "\n",
         "# BMI is filled with formula using data from Height and Weight column\n",
@@ -2706,10 +2706,10 @@
         "# Cholesterol is highly skewed by approximately 37.5 units (mg/dL), hence median is used\n",
         "medical_data.loc[:, 'Cholesterol'] = medical_data['Cholesterol'].fillna(medical_data['Cholesterol'].median())\n",
         "\n",
-        "# Diabetes is categorical and cannot be imputed as wished to dropping it\n",
+        "# Diabetes is categorical and cannot be imputed as wished so dropping it\n",
         "medical_data = medical_data.dropna(subset=['Diabetes'])\n",
         "\n",
-        "# Smoking is categorical and cannot be imputed as wished to dropping it\n",
+        "# Smoking is categorical and cannot be imputed as wished so dropping it\n",
         "medical_data = medical_data.dropna(subset=['Smoking'])"
       ],
       "metadata": {
